# amdgpu

./: README.md
cuda/: dgemm_cuda  dgemm_cuda.cu  dgemm_cuda.ptx
hip/: Makefile  dgemm_hip.cpp  make.bkp  stream
hip/includes/: error_checking.h
multipleKernel/: CMakeLists.txt  dgemm_cuda.cpp  note.md  run_dgemm.cu
multipleKernel/cudafun/: data_transfer.cu  kernel_runner.cu  matrix_management.cu  matrix_mul_kernel1.cu  matrix_mul_kernel2.cu  matrix_mul_kernel3.cu  matrix_mul_kernel4.cu  matrix_mul_kernel5.cu  run_dgemm.cu
multipleKernel/includes/: cuda_version_check.h  dgemm_functions.h  error_checking.h  kernel_registry.h  kernel_runner.h  matrix_management.h  matrix_mul_kernel.h  performance_result.h
multipleKernel/utility/: print_summary.cpp
multipleKernel_hip/: CMakeLists.txt  dgemm_cuda.cpp  run_dgemm.cpp
multipleKernel_hip/cudafun/: data_transfer.cpp  kernel_runner.cpp  matrix_management.cpp  matrix_mul_kernel1.cpp  matrix_mul_kernel2.cpp  matrix_mul_kernel3.cpp  matrix_mul_kernel4.cpp  matrix_mul_kernel5.cpp
multipleKernel_hip/includes/: dgemm_functions.h  error_checking.h  kernel_runner.h  matrix_management.h  matrix_mul_kernel.h  performance_result.h  performance_utils.h
multipleKernel_patches/: CMakeLists.txt  dgemm_cuda.cpp
multipleKernel_patches/cudafun/: matrix_mul_kernel2.cu  run_dgemm.cu  run_dgemm.cu.bkp
multipleKernel_patches/includes/: dgemm_functions.h  performance_result.h  performance_utils.h
multipleKernel_patches/utility/: print_summary.cpp
roblas_sgemm/: CMakeLists.txt  Makefile  kernel0_rocblas.h  sgemm.h
rocblas_dgemm/: CMakeLists.txt  rocblas_dgemm.cpp
rocblas_dgemm/includes/: performance.h
rocblas_sgemm/: kernel0_rocblas.cpp  rocblas_dgemm.cpp
